--- a/clubs/templates/clubs/teams/card.html
+++ b/clubs/templates/clubs/teams/card.html
@@ -1,16 +1,20 @@
 {% load i18n %}
 {% load static %}
 {% load thumbnail %}
+{% load playmaker %}
 
-<div class="card" >
-  <div>
 
+<div class="card p-2 m-1">
+  <div class="text-center">
     <img title="" class="avatar" src="{% thumbnail team.picture|default:'default_team.png' 'profile_avatar_show' %}">
   </div>
   
   <div class="card-body">
     <h5 class="card-title">{{ team.name }}</h5>
     <p class="card-text">{{ team.about }}.</p>
-    <a href="{{ team.get_permalink }}" class="btn btn-primary">{% trans 'odwiedź stronę' %}</a>
+   
+    {% get_club_link team.club text='Klub'%}
+
+
   </div>
 </div>
