--- a/soccerbase/templates/soccerbase/tables/filters/ms_league.html
+++ b/soccerbase/templates/soccerbase/tables/filters/ms_league.html
@@ -1,26 +1,24 @@
 
+{% load playmaker %}
+<select name="league" data-width="120px" title="rozgrywki" class="selectpicker" data-actions-box="true" multiple data-live-search="true" data-selected-text-format="count > 3">
 
-<select name="league" title="rozgrywki" class="selectpicker" multiple data-live-search="true" data-selected-text-format="count > 3">
+<option {% if 'Ekstraklasa' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Ekstraklasa</option>
+<option {% if '1 liga' in request.GET|get_list:'league' %} selected="selected" {% endif %}>1 liga</option>
+<option {% if '2 liga' in request.GET|get_list:'league' %} selected="selected" {% endif %}>2 liga</option>
+<option {% if '3 liga' in request.GET|get_list:'league' %} selected="selected" {% endif %}>3 liga</option>
+<option {% if '4 liga' in request.GET|get_list:'league' %} selected="selected" {% endif %}>4 liga</option>
+<option {% if '5 liga' in request.GET|get_list:'league' %} selected="selected" {% endif %}>5 liga</option>
+<option {% if 'Liga Okręgowa' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Liga Okręgowa</option>
+<option {% if 'A klasa' in request.GET|get_list:'league' %} selected="selected"{% endif %}>A klasa</option>
+<option {% if 'B klasa' in request.GET|get_list:'league' %} selected="selected" {% endif %}>B klasa</option>
+<option {% if 'C klasa' in request.GET|get_list:'league' %} selected="selected" {% endif %}>C klasa</option>
+<option {% if 'Ekstraliga' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Ekstraliga</option>
+<option {% if 'Junior A1' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Junior A1</option>
+<option {% if 'Junior A2' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Junior A2</option>
+<option {% if 'Junior Młodszy B1' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Junior Młodszy B1</option>
+<option {% if 'Junior Młodszy B2' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Junior Młodszy B2</option>
+<option {% if 'Trampkarz C1' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Trampkarz C1</option>
+<option {% if 'Trampkarz C2' in request.GET|get_list:'league' %} selected="selected" {% endif %}>Trampkarz C2</option>
 
-
-<option {% if request.GET.league == 'Trampkarz C2' %} selected {% endif %}>Trampkarz C2</option>
-<option {% if request.GET.league == '3 liga' %} selected {% endif %}>3 liga</option>
-<option {% if request.GET.league == 'Junior Młodszy B1' %} selected {% endif %}>Junior Młodszy B1</option>
-<option {% if request.GET.league == 'Ekstraklasa' %} selected {% endif %}>Ekstraklasa</option>
-<option {% if request.GET.league == 'Trampkarz C1' %} selected {% endif %}>Trampkarz C1</option>
-<option {% if request.GET.league == 'C klasa' %} selected {% endif %}>C klasa</option>
-<option {% if request.GET.league == 'Ekstraliga' %} selected {% endif %}>Ekstraliga</option>
-<option {% if request.GET.league == '2 liga' %} selected {% endif %}>2 liga</option>
-<option {% if request.GET.league == '1 liga' %} selected {% endif %}>1 liga</option>
-<option {% if request.GET.league == 'Junior A1' %} selected {% endif %}>Junior A1</option>
-<option {% if request.GET.league == 'A klasa' %} selected {% endif %}>A klasa</option>
-<option {% if request.GET.league == '5 liga' %} selected {% endif %}>5 liga</option>
-<option {% if request.GET.league == '4 liga' %} selected {% endif %}>4 liga</option>
-<option {% if request.GET.league == 'Liga Okręgowa' %} selected {% endif %}>Liga Okręgowa</option>
-<option {% if request.GET.league == 'Junior Młodszy B2' %} selected {% endif %}>Junior Młodszy B2</option>
-<option {% if request.GET.league == 'Junior A2' %} selected {% endif %}>Junior A2</option>
-<option {% if request.GET.league == 'B klasa' %} selected {% endif %}>B klasa</option>
 
 </select>
-
-
