--- a/backend/static/assets/css/signup.css
+++ b/backend/static/assets/css/signup.css
@@ -22,6 +22,13 @@
   background-repeat: no-repeat; /*Prevent showing multiple background images*/
 }
 
+.error-message {
+  color: #fff;
+  background: #ed3c0d;
+  text-align: left;
+  padding: 15px;
+  font-weight: 600;
+}
 
 
 #signup .terms {
