--- a/users/templates/account/partials/_signup.html
+++ b/users/templates/account/partials/_signup.html
@@ -37,23 +37,40 @@
 
         <div class="col-md-6 mb-3">
           <input type="text" class="form-control" name="first_name" id="id_first_name" value="{{form.first_name.value|default_if_none:'' }}" placeholder="imię" required="">
-          {{form.first_name.errors}}
+          {% if form.first_name.errors %}
+            <div class="alert alert-danger" role="alert">
+            {{form.first_name.errors}}
+            </div>
+          {% endif %}
         </div>
 
         <div class="col-md-6 mb-3">
           <input type="text" class="form-control" name="last_name" id="id_last_name" value="{{form.last_name.value|default_if_none:''}}" placeholder="nazwisko" required>
-          {{form.last_name.errors}}
+            {% if form_last_name.errors %}
+            <div class="alert alert-danger" role="alert">
+              {{form.last_name.errors}}
+            </div>
+          {% endif %}
         </div>
 
         
         <div class="col-12 mb-3">
             <input type="email" class="form-control" name="email" id="id_email" value="{{form.email.value|default_if_none:''}}" placeholder="email"  required>            
-            {{form.email.errors}}
+            {% if form.email.errors %}
+            <div class="alert alert-danger" role="alert">
+              {{form.email.errors}}
+            </div>
+          {% endif %}
         </div>
 
         <div class="col-12 mb-3">
             <input type="password" class="form-control" name="password1" id="id_password1"  value="{{form.password1.value|default_if_none:''}}" placeholder="hasło" required>
-            {{form.password.errors}}
+            {% if form.password.errors %}
+            <div class="alert alert-danger" role="alert">
+              {{form.password.errors}}
+            </div>
+          {% endif %}
+           
         </div>
 
         <div class="col-12 mb-3">
@@ -72,7 +89,7 @@
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
        
-        {{ form.errors }} {# @todo to be removed #}
+        {% comment %} {{ form.errors }} {# @todo to be removed #} {% endcomment %}
         <div class="col-12 text-center mb-3">
               <span class='small'> lub użyj</span>
         </div>
