--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -3,7 +3,7 @@
 {% block body_class %}template-404{% endblock %}
 
 {% block content %}
-    <h1>Page not found</h1>
-asdasdasdas
-    <h2>Sorry, this page could not be found.</h2>
+    <h1>Wybrana strona nie istnieje</h1>
+
+    <h2>Wybacz ale wyszukiwana strona nie istnieje.</h2>
 {% endblock %}
