--- a/backend/templates/500.html
+++ b/backend/templates/500.html
@@ -2,12 +2,12 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8" />
-        <title>Internal server error</title>
+        <title>500 Internal server error</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <h1>Internal server error</h1>
-asasdasdasda
-        <h2>Sorry, there seems to be an error. Please try again soon.</h2>
+        <h1>500 Internal server error</h1>
+
+        <h2>Wystąpił bliżej nie określony problem. Proszę spróbuj za chwile.</h2>
     </body>
 </html>
