--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -10,8 +10,8 @@
             KRS: 0000813330 <br>
             REGON: 384848876<br>
             Wrocław<br><br>
-            <strong>Telefon:</strong> +????<br>
-            <strong>Email:</strong> info@playmaker.pro<br>
+            <strong>Telefon:</strong> 504 271 466<br>
+            <strong>Email:</strong> biuro@playmaker.pro<br>
         </p>
         </div>
 
@@ -20,30 +20,30 @@
         <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Strona Główna</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">O projekcie</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Produkty</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Regularmin</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Warunki prywatności</a></li>
+            {% comment %} <li><i class="bx bx-chevron-right"></i> <a href="#">Produkty</a></li> {% endcomment %}
+            <li><i class="bx bx-chevron-right"></i> <a href="/rules">Regularmin</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="/privacypolicy">Warunki prywatności</a></li>
         </ul>
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
         <h4>Nasze usługi</h4>
         <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">xxxx</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Cos xxxx</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Cos interesujacego innegot</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Moze jeszcze cos</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">To też na pewno to.</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="/scouting">Skauting</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="/transfer">Wsparcie transferowe</a></li>
+            {% comment %} <li><i class="bx bx-chevron-right"></i> <a href="#">Cos interesujacego innegot</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Moze jeszcze cos</a></li> {% endcomment %}
+            <li><i class="bx bx-chevron-right"></i> <a href="/limits">Zwiększ limity</a></li>
         </ul>
         </div>
 
-        <div class="col-lg-4 col-md-6 footer-newsletter">
+        {% comment %} <div class="col-lg-4 col-md-6 footer-newsletter">
         <h4>Dołącz do newslettera</h4>
         <p>Bądź zawze na bierząco z nowościami PlayMakera. @todo not working yet..</p>
         <form action="" method="post">
             <input type="email" name="email"><input type="submit" value="Zapisz się">  
         </form>
-        </div>
+        </div> {% endcomment %}
 
     </div>
     </div>
