--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -13,7 +13,7 @@
         <div class="col-xl-6 ">
           <h1 class="mb-5">Znajdź i bądź znalezionym w świecie piłki nożnej! </h1>
           <h2>Szukaj <span id="word" >piłkarzy</span><span class="main-color"></span></h2>
-          <a href="/signup/" class="btn-get-started scrollto btn-lg"><h2>ZAŁÓŻ DARMOWE KONTO</h2></a>
+          <a href="/signup/" class="btn-get-started scrollto btn-lg"><h2 style="margin-top:0px;">ZAŁÓŻ DARMOWE KONTO</h2></a>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
 
     <!-- ======= Player Service Section ======= -->
     <section id="players" class="players">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <div class="section-title">
           <h1><span style="color:grey"> PIŁKARZ </span> </span></h1> <h2> STAŃ SIĘ WIDOCZNY W ŚWIECIE PIŁKI NOŻNEJ</h2>
         </div>
@@ -33,7 +33,7 @@
             <div class="player-box">
               <i class="icofont-users"></i>
               <p>Zaprezentuj się trenerom, skautom oraz klubom. Złóż swoje piłkarskie CV, a my dołączymy do niego zweryfikowane statystyki</p>
-             <a href="{{example_player_cv}}" class="btn-owl" alt="clubs-base">Zobacz przykład</a>
+             <a href="/users/player-jacek-jasinski/" class="btn-owl" alt="clubs-base">Zobacz przykład</a>
             </div>
           </div>
 
@@ -41,7 +41,7 @@
             <div class="player-box">
               <i class="icofont-spinner-alt-3"></i>
               <p>Szukaj klubu. Szukaj testów. Szukaj szkółki. Brak ofert o Twoich wymaganiach? Pomożemy Ci w transferze w Polsce i za granicą. </p>
-               <a href="/tables/teams/" class="btn-owl" alt="clubs-base">Szukaj klubu</a>
+               <a href="/transfer" class="btn-owl" alt="clubs-base">Szukaj klubu</a>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
             <div class="player-box">
               <i class="icofont-star"></i>
               <p>Obserwuj piłkarzy, trenerów oraz kluby. Otrzymuj powiadomienia o ich wynikach. Zapraszaj znajomych i rywalizuj z nimi w Fantasy dla niższych lig.</p>
-              <a href="/fantasy/" class="btn-owl" alt="clubs-base">Graj w fantasy</a>
+              <a href="/signup/" class="btn-owl" alt="clubs-base">Graj w fantasy</a>
             </div>
           </div>
 
@@ -57,12 +57,12 @@
             <div class="player-box">
               <i class="icofont-listine-dots"></i>
               <p>Korzystaj z produktów dodatkowych. Dietetyk, Trener motoryczny, Trener bramkarzy, Trener techniki, Trener mentalny. Raport skautingowy z Twojej gry.</p>
-                <a href="/products/" class="btn-owl" alt="clubs-base">Skorzystaj z produktów</a>
+                <a href="/signup/" class="btn-owl" alt="clubs-base">Skorzystaj z produktów</a>
             </div>
           
         </div>
-        <div class="text-center">
-        <a href="/signup/" class="btn-owl btn-lg"><h2>Dołącz za darmo</h2></a>
+        <div class="col text-center">
+          <a href="/signup/" class="btn-owl btn-owl-big  btn-lg">Dołącz za darmo</a>
         </div>
       </div>
     </section><!-- End Player Service Section -->
@@ -82,67 +82,74 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box" data-aos="fade-up" data-aos-delay="200">
               <h3>Kluby półprofesjonalne</h3>
-              <h2>Dedykowane klubom od III ligi do B klasy</h2>
+              <h2>III liga - B klasa</h2>
               <p></p>
               <hr>
               <ul>
-                <li>Definiujemy szczegóły zlecenia</li>
-                <li>Filtrujemy wskazany region</li>
-                <li>Wykorzystujemy oprogramowanie informatyczne</li>
-                <li>Lista piłkarzy powstaje w godzinę</li>
-                <li>Kontaktujemy się z nimi</li>
-                <li>Rozliczenie od efektu: testów i transferu</li>
-                <li>Klub oszczędza czas i minimalizuje koszty</li>
+                <li>Określamy parametry piłkarzy</li>
+                <li>Wyznaczamy region obserwacyjny</li>
+                <li>Analizujemy statystycznie piłkarzy*</li>
+                <li>Wystawiamy raport skautingowy</li>
+                <li>Kontaktujemy się z zawodnikami**</li>
+                <li>Rozliczamy się od efektu: testów i transferu</li>
+                <li></li>
+                <li style="font-size:1.2rem;">od 199 pln</li>
               </ul>
+            
               <div class="btn-wrap">
-                <a href="www.playmaker.pro/scouting/semi-pro" class="btn-buy">zobacz więcej</a>
+                <a href="www.playmaker.pro/scouting/" class="btn-buy">zobacz więcej</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
-              <h3>Kluby profesjonalne</h3>
-              <h2>Dedykowane klubom od Ekstraklasy do III ligi</h2>
+            <h3>Kluby profesjonalne</h3>
+              <h2>Ekstraklasa - III liga</h2>
               <p></p>
               <hr>
               <ul>
-                <li>Spisujemy wymagania obserwacji</li>
-                <li>Filtrujemy wskazany region</li>
-                <li>Szukamy danych o piłkarzach</li>
-                <li>Wyznaczamy ich potencjał</li>
-                <li>Sprawdzamy opinie na ich temat</li>
-                <li>Obserwujemy na video</li>
-                <li>Obserwujemy na żywo</li>
-                <li>Raportujemy wyróżniających się piłkarzy </li>
+
+                <li>Określamy parametry piłkarzy</li>
+                <li>Wyznaczamy region obserwacyjny</li>
+                <li>Analizujemy statystycznie piłkarzy*</li>
+                <li>Obserwujemy na żywo lub online</li>
+                <li>Pozyskujemy niezależne opinie</li>
+                <li>Weryfikujemy social media </li>
+                <li>Konsultujemy systematycznie raporty skautingowe </li>
+                <li>Rekomendujemy wyróżniających się piłkarzy</li>
+                <li></li>
+                <li style="font-size:1.5rem;">od 699 pln</li>
               </ul>
+
               <div class="btn-wrap">
-                <a href="/scouting/pro/" class="btn-buy">Zobacz więcej</a>
+                <a href="/scouting/" class="btn-buy">Zobacz więcej</a>
               </div>
             </div>
-          </div>
-
+            </div>
+ 
 
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="300">
-              <h3>Szkółki piłkarskie</h3>
-              <h2>Dedykowane dla szkółek i drużyn młodzieżowych</h2>
+              <h3>Drużyny młodzieżowe</h3>
+              <h2>Szkółki i akademie</h2>
               <p></p>
               <hr>
               <ul>
-                <li>Ustalamy wymagania oraz termin</li>
-                <li>Filtrujemy wskazany region</li>
-                <li>Wykorzystujemy oprogramowanie informatyczne</li>
-                <li>Lista talentów powstaje w godzinę</li>
-                <li>Kontaktujemy się z ich rodzicami*</li>
-                <li>Klub oszczędza czas i minimalizuje koszty</li>
-                <li>Rozliczamy się od listy kontaktów lub testowanych piłkarzy</li>
+                <li>Określamy parametry piłkarzy</li>
+                <li>Wyznaczamy region obserwacyjny</li>
+                <li>Analizujemy statystycznie piłkarzy*</li>
+                <li>Wystawiamy raport skautingowy </li>
+                <li>Kontaktujemy się z rodzicami**</li>
+                <li>Rozliczamy się od efektu: testów i transferu</li>
+                <li></li>
+                <li style="font-size:1.2rem;">od 199 pln</li>
               </ul>
+            
               <div class="btn-wrap">
                 <a href="www.playmaker.pro/scouting/semi-pro" class="btn-buy">zobacz więcej</a>
               </div>
             </div>
-          </div>
 
         </div>
 
@@ -170,7 +177,7 @@
                       <a href="/tables/players/" class="btn-owl mb-5">Zobacz bazę piłkarzy</a>
               <li><i class="ri-check-double-line"></i>Brak zawodników spełniających Twoje wymagania? Zleć nam poszukiwania poza bazą. Przeprowadzimy dla Ciebie nabór do szkółki. Znajdziemy zawodników o konkretnych cechach niezależnie od poziomu rozgrywkowego. A dla klubów profesjonalnych monitorujemy region jako skauci. 
                       </li>
-                      <a href="/products/" class="btn-owl scrollto">Zobacz ofertę</a>
+                      <a href="/scouting/" class="btn-owl scrollto">Zobacz ofertę</a>
             </ul>
             <p>
               
@@ -196,7 +203,7 @@
           <img src="{% static 'assets/img/clubs/club_none.png' %}" alt="club_none">
           <img src="{% static 'assets/img/clubs/club_none.png' %}" alt="club_none">
           <img src="{% static 'assets/img/clubs/club_4.png' %}" alt="club_4">   <!--@todo to z bazy wyciagac i alt dac jako name-->
-          <img src="{% static 'assets/img/clubs/club_4.png' %}" alt="club_4"> 
+          <img src="{% static 'assets/img/clubs/club_7.png' %}" alt="club_4"> 
           <img src="{% static 'assets/img/clubs/club_none.png' %}" alt="club_none">
           <img src="{% static 'assets/img/clubs/club_none.png' %}" alt="club_none">
         </div>
@@ -206,6 +213,8 @@
           <img src="{% static 'assets/img/clubs/club_3.png' %}" alt="club_3">   <!--@todo to z bazy wyciagac i alt dac jako name-->
           <img src="{% static 'assets/img/clubs/club_5.png' %}" alt="club_5">   <!--@todo to z bazy wyciagac i alt dac jako name-->
           <img src="{% static 'assets/img/clubs/club_6.png' %}" alt="club_6">   <!--@todo to z bazy wyciagac i alt dac jako name-->
+          <img src="{% static 'assets/img/clubs/club_8.png' %}" alt="club_6">   <!--@todo to z bazy wyciagac i alt dac jako name-->
+          <img src="{% static 'assets/img/clubs/club_10.png' %}" alt="club_6">   <!--@todo to z bazy wyciagac i alt dac jako name-->
         </div>
       </div>
     </section><!-- End Clients Section -->
@@ -272,7 +281,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-team"></i>
-              <span data-toggle="counter-up">232</span>
+              <span data-toggle="counter-up">1,078</span>
               <p>Liczba piłkarzy z pełnym CV</p>
             </div>
           </div>
@@ -280,7 +289,8 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="icofont-users"></i>
-              <span data-toggle="counter-up">521</span>
+              
+              <span data-toggle="counter-up">102</span>
               <p>Liczba zarejestrowanych klubów i trenerów</p>
             </div>
           </div>
@@ -288,7 +298,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-field"></i>
-              <span data-toggle="counter-up">1,463</span>
+              <<span data-toggle="counter-up">100</span>
               <p>Liczba wysłanych piłkarzy na testy</p>
             </div>
           </div>
@@ -296,7 +306,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-search-user"></i>
-              <span data-toggle="counter-up">15</span>
+              <span data-toggle="counter-up">10</span>
               <p>Liczba przeprowadzonych naborów do szkółek</p>
             </div>
           </div>
@@ -337,14 +347,14 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Napisz do nas</h3>
-                  <p>info@playmaker.pro<br>contact@example.com</p>
+                  <p>biuro@playmaker.pro<br>skauting@playmaker.pro</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Zadzwoń</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>504 271 466<br>605 243 505</p>
                 </div>
               </div>
             </div>
@@ -356,11 +366,11 @@
              {% csrf_token %}
               <div class="row">
                 <div class="col form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Twoje imie" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validate"></div>
                 </div>
                 <div class="col form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email kontaktowy" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validate"></div>
                 </div>
               </div>
