--- a/soccerbase/templates/soccerbase/tables/filters/player.html
+++ b/soccerbase/templates/soccerbase/tables/filters/player.html
@@ -43,7 +43,7 @@
                     <div class="col-4  col-md-1 filter ml-1"> 
                         <input class="form-control" type="number" value="{{ request.GET.age_min }}" name="age_min" placeholder="wiek od">
                     </div>
-                    <div class="col-4  col-md-1 filter ml-1"> 
+                    <div class="col-4  col-md-1 filter ml-1" width="100"> 
                         <input class="form-control" type="number" value="{{ request.GET.age_max }}" name="age_max" placeholder="wiek do">
                     </div>
  
