--- a/soccerbase/templates/soccerbase/tables/players_card.html
+++ b/soccerbase/templates/soccerbase/tables/players_card.html
@@ -10,7 +10,7 @@
   <div class="card-body  table-item"> 
   <div class="row">
         <div class="d-none d-md-inline col-md-3">
-        Imię / nazwisko / Wiek
+        Imię / nazwisko / wiek
         </div>
 
 
@@ -23,7 +23,7 @@
         </div >
 
         <div class="col-5 col-md-2  text-center">
-             Wojewódźtwo
+             Region
         </div>
         
         <div class="col-6 col-md-2 text-center"> 
@@ -31,7 +31,7 @@
         </div>
 
         <div class="col-6 col-md-2 text-center"> 
-           Brakmi - Mecze - Minuty
+           Bramki - Mecze - Minuty
         </div>
 
         {% comment %} <div class="d-none d-md-inline  col-4 col-md-1 stats  text-center">  
