--- a/users/templates/account/password_reset.html
+++ b/users/templates/account/password_reset.html
@@ -14,12 +14,18 @@
 
     <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+<form method="POST" action="/password/reset/" class="password_reset">
+<input type="hidden" name="csrfmiddlewaretoken" value="xobvfOAz7uaz6bkhpPz5C0BoSWSqDOx76AbXGtknI01ic3zVDEWOB3kih1RjAMSo"><p>
+<label for="id_email">E-mail:</label>
+<input type="email" name="email" size="30" placeholder="Adres e-mail" required="" {% if request.GET.email %}value="{{ request.GET.email }}"{% endif %} id="id_email"></p>
+<input type="submit" class="btn-pm btn-pm-sm" value="Zresetuj moje hasło"></form>
+
+    {% comment %} <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+    </form> {% endcomment %}
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %} <br>biuro@playmaker.pro</p>
 </div>
 {% endblock %}
