--- a/users/templates/account/password_reset.html
+++ b/users/templates/account/password_reset.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 
-{% block account_title %}{% trans "Ustaw hasło na nowo" %}{% endblock %}
+{% block account_title %}Ustaw hasło na nowo{% endblock %}
 
 {% block account_content %}
 
@@ -12,7 +12,9 @@
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    {% comment %} <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p> {% endcomment %}
+
+<p>Zapomniałeś swojego hasła? Wpisz swój adres e-mail poniżej, a my wyślemy Tobie wiadomość, dzięki której dokonasz jego zmiany.</p>
 
 <form method="POST" action="/password/reset/" class="password_reset">
 <input type="hidden" name="csrfmiddlewaretoken" value="xobvfOAz7uaz6bkhpPz5C0BoSWSqDOx76AbXGtknI01ic3zVDEWOB3kih1RjAMSo"><p>
@@ -25,7 +27,9 @@
         {{ form.as_p }}
         <input type="submit" value="{% trans 'Reset My Password' %}" />
     </form> {% endcomment %}
+{% comment %} 
+    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %} <br>biuro@playmaker.pro</p> {% endcomment %}
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %} <br>biuro@playmaker.pro</p>
+<p>Skontaktuj się z nami, jeśli masz problem ze zresetowaniem swojego hasła. </p>
 </div>
 {% endblock %}
