--- a/users/templates/account/password_reset.html
+++ b/users/templates/account/password_reset.html
@@ -15,7 +15,7 @@
     {% comment %} <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p> {% endcomment %}
 
 <p>Zapomniałeś swojego hasła? Wpisz swój adres e-mail poniżej, a my wyślemy Tobie wiadomość, dzięki której dokonasz jego zmiany.</p>
-
+{% csrf_token %}
 <form method="POST" action="/password/reset/" class="password_reset">
 <input type="hidden" name="csrfmiddlewaretoken" value="xobvfOAz7uaz6bkhpPz5C0BoSWSqDOx76AbXGtknI01ic3zVDEWOB3kih1RjAMSo"><p>
 <label for="id_email">E-mail:</label>
