--- a/users/templates/account/password_reset.html
+++ b/users/templates/account/password_reset.html
@@ -17,7 +17,8 @@
 <p>Zapomniałeś swojego hasła? Wpisz swój adres e-mail poniżej, a my wyślemy Tobie wiadomość, dzięki której dokonasz jego zmiany.</p>
 {% csrf_token %}
 <form method="POST" action="/password/reset/" class="password_reset">
-<input type="hidden" name="csrfmiddlewaretoken" value="xobvfOAz7uaz6bkhpPz5C0BoSWSqDOx76AbXGtknI01ic3zVDEWOB3kih1RjAMSo"><p>
+{% csrf_token %}
+<p>
 <label for="id_email">E-mail:</label>
 <input type="email" name="email" size="30" placeholder="Adres e-mail" required="" {% if request.GET.email %}value="{{ request.GET.email }}"{% endif %} id="id_email"></p>
 <input type="submit" class="btn-pm btn-pm-sm" value="Zresetuj moje hasło"></form>
