--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -64,7 +64,9 @@
     </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="@todo" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="@todo"
+      
+       class="twitter"><i class="bx bxl-twitter"></i></a>
       <a href="@todo" class="facebook"><i class="bx bxl-facebook"></i></a>
       <a href="@todo" class="instagram"><i class="bx bxl-instagram"></i></a>
       <a href="@todo" class="google-plus"><i class="bx bxl-skype"></i></a>
